@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          use the new "mute" feature of Log::Dispatchouli to simplify listdeps
 
 4.102220  2010-08-10 07:46:27 America/New_York
           pass a $dist var to TemplateModule templates
